Minor fix in contact_form.html to work against HTML parser

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,12 @@
  #bulleted-list{
     list-style-position:inside;
  }
+ .contactFormHeading{
+    text-align: center;
+ }
+ #contactFormDescription{
+    text-align: center;
+ }
  button{
     font-size:20px; 
     color:black; 
