--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,10 @@
    cursor: pointer;
 }
 
+#social-media-icons-container{
+   background-color: whitesmoke;
+}
+
 em{
    color: white;
 }
@@ -118,7 +122,7 @@ em{
  
  #my_image{
     position: relative;
-    top: 20px;
+    top: 5px;
     width: 600px;
     height: 650px;
     float: right;
@@ -129,9 +133,7 @@ em{
  #education #ud_image{
     float: left;
  }
- #hobbiesInterests{
-    overflow: hidden;
- }
+ 
  #singing-img-text{
      float:left;
      margin-left: 150px;
@@ -150,11 +152,10 @@ em{
  }
  #interestingFact #small_baby_image{
     margin-left: 20px;
+    margin-bottom: 30px;
     float: left;
  }
- #webDevelopmentAspect{
-    clear: both;
- }
+
  #bulleted-list{
     list-style-position:inside;
  }
