--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,15 @@
     overflow-y: auto;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  }
+
+
+@media only screen and (max-width: 620px) {
+   /* For mobile phones: */
+   .header, .footer{
+     width: 100%;
+   }
+ }
+
  span a, .dropbtn {
    display: inline-block;
    color: white;
