--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,14 @@ em{
  #user_fname, #user_lname, #user_email, #user_phone{
     width: 300px;
     height: 30px;
- } 
+ }
+ 
+ .anchorButtons{
+   background-color: #199319;
+   color: white;
+   padding: 30px 50px;
+   text-decoration: none;
+ }
 
  button{
     font-size: 20px;
